--- a/_includes/services.html
+++ b/_includes/services.html
@@ -3,13 +3,13 @@
        {% for item in site.data.details.page-headers.services %}
         <!-- Row -->
         <div class="row justify-content-center">
-            <div class="col-md-12 text-center m-b-40  aos-init aos-animate" data-aos="fade-up" data-aos-duration="1800" data-aos-easing="linear"><img src="/images/coffee-express.svg" alt="Coffee Express India" class="img-fluid" ></div>
+            <div class="col-md-12 text-center m-b-40  aos-init aos-animate" data-aos="fade-up" data-aos-duration="1800" data-aos-easing="linear"><img src="{{site.baseurl}}/images/coffee-express.svg" alt="Coffee Express India" class="img-fluid" ></div>
             <br>
             <div class="col-md-7 text-center">
-               
+
                 <h2 class="title">{{item.title}}</h2>
                 <h6 class="subtitle">{{item.details}}</h6>
-                
+
             </div>
         </div>
         <br>
