--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -10,7 +10,7 @@
 
     {% for item in site.data.details.slider %}
         <div class="carousel-item {% if forloop.index == 1 %}active{% endif %}">
-            <!-- Slide Background --><img src="/images/{{item.image}}" alt="{{site.title}}" class="slide-image" />
+            <!-- Slide Background --><img src="{{site.baseurl}}/images/{{item.image}}" alt="{{site.title}}" class="slide-image" />
             <!-- Slide Text Layer -->
             <div class="slide-text slide_style_left">
                 <div class="container">
