--- a/_includes/technology.html
+++ b/_includes/technology.html
@@ -1,7 +1,7 @@
 <div id="technology" class="spacer feature1">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-md-12 text-center m-b-20  aos-init aos-animate" data-aos="fade-up" data-aos-duration="1800" data-aos-easing="linear"><img src="/images/coffee-spatula.svg" alt="Coffee Express India" class="img-fluid"></div>
+            <div class="col-md-12 text-center m-b-20  aos-init aos-animate" data-aos="fade-up" data-aos-duration="1800" data-aos-easing="linear"><img src="{{site.baseurl}}/images/coffee-spatula.svg" alt="Coffee Express India" class="img-fluid"></div>
             <div class="col-md-7 text-center">
                {% for item in site.data.details.page-headers.technology %}
                 <h2 class="title">{{item.title}}</h2>
@@ -23,7 +23,7 @@
                 </div>
             </div>
             {% endfor %}
-        
+
         </div>
     </div>
 </div>
