--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -1,10 +1,10 @@
 
 <div id="testimonials" class="testimonial9 spacer bg-light">
-   
+
     <div class="container">
         <br>
         <div class="row justify-content-center">
-            <div class="col-md-12 text-center m-b-40  aos-init aos-animate" data-aos="fade-up" data-aos-duration="1800" data-aos-easing="linear"><img src="/images/coffee-cup-large.svg" alt="Coffee Express India" class="img-fluid"></div>
+            <div class="col-md-12 text-center m-b-40  aos-init aos-animate" data-aos="fade-up" data-aos-duration="1800" data-aos-easing="linear"><img src="{{site.baseurl}}/images/coffee-cup-large.svg" alt="Coffee Express India" class="img-fluid"></div>
            </div>
            <br>
            <br>
@@ -28,14 +28,14 @@
                             </div>
                         </div>
                         <div class="d-flex no-block align-items-center">
-                            <div class="customer-thumb"><img src="/images/{{item.image}}" alt="{{item.title}}" class="circle" /></div>
+                            <div class="customer-thumb"><img src="{{site.baseurl}}/images/{{item.image}}" alt="{{item.title}}" class="circle" /></div>
                             <div class="">
                                 <h6 class="font-bold m-b-0">{{item.title}}</h6><span class="font-13">{{item.position}}</span></div>
                         </div>
                     </div>
                     <!-- item -->
                     {% endfor %}
-            
+
             <!--         <div class="item">
                         <div class="card card-shadow">
                             <div class="p-40">
@@ -62,7 +62,7 @@
                                 <h6 class="font-bold m-b-0">Michael Anderson</h6><span class="font-13">Project client</span></div>
                         </div>
                     </div> -->
-                    
+
                 </div>
             </div>
         </div>
