--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  
+
     <link rel="dns-prefetch" href="//www.facebook.com">
     <link rel="dns-prefetch" href="//connect.facebook.net">
     <link rel="dns-prefetch" href="//staticxx.facebook.com">
@@ -16,16 +16,16 @@
     <link rel="dns-prefetch" href="//khms1.googleapis.com">
     <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
     <link rel="dns-prefetch" href="//www.google-analytics.com">
-    
+
     <meta name="google-site-verification" content="tqeWtb-P1aG4KHDiRYF4hmVjuyZV-JiNizydv-sJoz8" />
-   
+
     <!-- Favicon icon -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="{{site.baseurl}}/favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
         {% seo %}
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/style.css">
-    
+    <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/css/style.css">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
