--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <div class="header5">
         <div class="container po-relative">
             <nav class="navbar navbar-expand-lg hover-dropdown h5-nav-bar">
-                <a  href="/" class="navbar-brand scroll-link"><img src="/images/logox200.png" alt="Express Coffee"></a>
+                <a  href="/" class="navbar-brand scroll-link"><img src="{{site.baseurl}}/images/logox200.png" alt="Express Coffee"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#h5-info" aria-expanded="false" aria-label="Toggle navigation"><span class="ti-menu"></span></button>
                 <div class="collapse navbar-collapse" id="h5-info">
                     <ul class="navbar-nav">
@@ -11,9 +11,9 @@
                         {% for item in site.data.details.page-headers.menu %}
                         <li class="nav-item">
                             <a class="nav-link scroll-link" href="{{item.link}}" >{{item.title}} </a>
-                        </li> 
+                        </li>
                         {% endfor %}
-                           
+
                         <!-- <li class="nav-item">
                             <a class="nav-link scroll-link" href="#technology" >Technology </a>
                         </li>
@@ -26,11 +26,11 @@
                         <li class="nav-item">
                             <a class="nav-link scroll-link" href="#testimonials">Testimonials </a>
                         </li>
-                        
+
                         <li class="nav-item">
                             <a class="nav-link scroll-link" href="#team">Team </a>
                         </li>
-                        
+
                         <li class="nav-item">
                             <a class="nav-link scroll-link" href="#contact">Contact Us </a>
                         </li> -->
