--- a/_includes/products.html
+++ b/_includes/products.html
@@ -15,7 +15,7 @@
             <!-- Column -->
             <div class="col-md-6 p40">
                 <div class="card card-shadow aos-init" data-aos="{% if forloop.index == 1 %}flip-left{% elsif forloop.index == 2 %}flip-right{% elsif forloop.index == 3 %}flip-left{% else %}flip-right{% endif %}" data-aos-duration="1200">
-                    <a href="#" class="img-ho"><img class="card-img-top" src="/images/{{item.image}}" alt="{{item.detail}}"></a>
+                    <a href="#" class="img-ho"><img class="card-img-top" src="{{site.baseurl}}/images/{{item.image}}" alt="{{item.detail}}"></a>
                     <div class="card-body">
                         <h5 class="font-medium m-b-10">{{item.title}}</h5>
                         <p class="m-b-0 font-14">{{item.details}}</p>
