--- a/_sass/iconmind.scss
+++ b/_sass/iconmind.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'icomoon';
-  src: url("fonts/icomoon.eot?-rdmvgc");
-  src: url("fonts/icomoon.eot?#iefix-rdmvgc") format("embedded-opentype"), url("fonts/icomoon.woff?-rdmvgc") format("woff"), url("fonts/icomoon.ttf?-rdmvgc") format("truetype"), url("fonts/icomoon.svg?-rdmvgc#icomoon") format("svg");
+  src: url("../assets/icons/iconmind/fonts/icomoon.eot?-rdmvgc");
+  src: url("../assets/icons/iconmind/fonts/icomoon.eot?#iefix-rdmvgc") format("embedded-opentype"), url("../assets/icons/iconmind/fonts/icomoon.woff?-rdmvgc") format("woff"), url("../assets/icons/iconmind/fonts/icomoon.ttf?-rdmvgc") format("truetype"), url("../assets/icons/iconmind/fonts/icomoon.svg?-rdmvgc#icomoon") format("svg");
   font-weight: normal;
   font-style: normal; }
 
