--- a/_sass/themify-icons.scss
+++ b/_sass/themify-icons.scss
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'themify';
-	src:url('fonts/themify.eot?-fvbane');
-	src:url('fonts/themify.eot?#iefix-fvbane') format('embedded-opentype'),
-		url('fonts/themify.woff') format('woff'),
-		url('fonts/themify.ttf') format('truetype'),
-		url('fonts/themify.svg?-fvbane#themify') format('svg');
+	src:url('../assets/icons/themify-icons/fonts/themify.eot?-fvbane');
+	src:url('../assets/icons/themify-icons/fonts/themify.eot?#iefix-fvbane') format('embedded-opentype'),
+		url('../assets/icons/themify-icons/fonts/themify.woff') format('woff'),
+		url('../assets/icons/themify-icons/fonts/themify.ttf') format('truetype'),
+		url('../assets/icons/themify-icons/fonts/themify.svg?-fvbane#themify') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
